--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "SCMDB plus",
-  "version": "2.0",
+  "version": "2.2",
   "permissions": ["activeTab", "tabs", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html"
@@ -22,6 +22,8 @@
       }
   ],
   "host_permissions": [
+    "http://scmdb.mascorp.com/*",
     "https://jira.panasonic.aero/*"
-  ]
+  ],
+  "description": "Fixed the JIRA page redirecting issue"
 }
