--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "SCMDB plus",
-  "version": "2.2",
+  "version": "3.0",
   "permissions": ["activeTab", "tabs", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html"
@@ -25,5 +25,5 @@
     "http://scmdb.mascorp.com/*",
     "https://jira.panasonic.aero/*"
   ],
-  "description": "Fixed the JIRA page redirecting issue"
+  "description": "added manifest button"
 }
